--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "chess.js": "^1.4.0",
+    "geist": "^1.5.1",
     "next": "15.2.8",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "stockfish.js": "^10.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
