--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.21",
     "chess.js": "^1.4.0",
     "geist": "^1.5.1",
+    "leaflet": "^1.9.4",
     "next": "15.2.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
